--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Découvrez Kasa : leader de la location d'appartements entre particuliers en France depuis près de 10 ans, avec plus de 500 annonces quotidiennes. Trouvez votre location idéale dès aujourd'hui !"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
